--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 PORT=5000
-PGUSER=postgres
-PGHOST=localhost
-PGDATABASE=todos
+PGUSER=root
+PGHOST=152.67.226.10
+PGDATABASE=main
 PGPORT=5432
-PGPASSWORD=Maksden432
+PGPASSWORD=iamgay1234
 SECRET=/nfudkndhopbngklq
